--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
